docs(day09): complete masterclass guide on IoC, dependency hell, heap memory management, and testability